# Minimal-Makefile

./: Autotools.txt  CMakeLists.txt  GNU Make manual.txt  Makefile_1_c  Makefile_1_c++  Makefile_1_minimal  Makefile_1_minimal_c  Makefile_1_minimal_c++  Makefile_1_minimal_subdirs  Makefile_2_c  Makefile_2_c++  Makefile_2_outofsrc_c++  Makefile_2_subdirs  Makefile_2_subdirs_c  Makefile_2_subdirs_c++  Makefile_3_outofsrc  Makefile_3_outofsrc_c  Makefile_3_outofsrc_c++  Makefile_4  Makefile_4_macro  Makefile_4_multibinary  Makefile_5_multiple_dirs  Makefile_5_recursive  Makefile_6_project  Makefile_7_soname_rpath  Makefile_8_static_archive_clang_sanitizer  Makefile_8_static_clang_sanitizer  Makefile_c  Makefile_c++  Makefile_multibinary  Makefile_outofsrc_c  Makefile_outofsrc_c++  Makefile_recursive  Makefile_test  README.md  a  autotools.txt  manual.txt
C/: Makefile  Makefile1  Makefile2
C++/: Makefile  Makefile1
c++/: Makefile
test/: Makefile
